<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations"/>

    -->

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        
        />

    <ListPreference
        android:defaultValue="metric"
        android:entries="@array/temp_list_titles"
        android:entryValues="@array/temp_example_list_values"
        android:key="@string/pref_temp_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_temp"/>

</PreferenceScreen>
